updating swagger definition
