# code/app/Http/Controllers/httpControllers/tools/BoardController.php
@@ -118,6 +118,9 @@
                        description: 'The data' )]
         #[OA\Response( response: '404',
                        description: 'content not found' )]
+        #[OA\Parameter( name:'Authorization',
+                        description: 'has to be included in the header of the request',
+                        in: 'header' )]
         public final function public_read( ToolsBoardRequest $request )
         {
 
@@ -143,6 +146,9 @@
                        description: 'The data' )]
         #[OA\Response( response: '404',
                        description: 'content not found' )]
+        #[OA\Parameter( name:'Authorization',
+                        description: 'has to be included in the header of the request',
+                        in: 'header' )]
         public final function public_create( ToolsBoardRequest $request )
         {
 
@@ -168,6 +174,9 @@
                        description: 'The data')]
         #[OA\Response( response: '404',
                        description: 'content not found')]
+        #[OA\Parameter( name:'Authorization',
+                        description: 'has to be included in the header of the request',
+                        in: 'header' )]
         public final function public_update( ToolsBoardRequest $request )
         {
 
@@ -194,6 +203,9 @@
                        description: 'The data' )]
         #[OA\Response( response: '404',
                        description: 'content not found' )]
+        #[OA\Parameter( name:'Authorization',
+                        description: 'has to be included in the header of the request',
+                        in: 'header' )]
         public final function public_delete( ToolsBoardRequest $request )
         {
 
