# code/storage/app/swagger.json
@@ -47,6 +47,13 @@
         "/api/1.0.0/accounts/account/read": {
             "get": {
                 "operationId": "121077445940ac8019248752b6ede69c",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "has to be included in the header of the request"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "The data"
@@ -60,6 +67,13 @@
         "/api/1.0.0/accounts/account/logout": {
             "get": {
                 "operationId": "cf3e4f718e9cb3d650efb0d62d647eec",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "has to be included in the header of the request"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "The data"
